--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       justify-content: center;
       align-items: center;
       z-index: 1000;
+	  overscroll-behavior: contain;
     }
 
     .modal-content {
