--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       align-items: center;
       z-index: 1000;
 	  overscroll-behavior: contain;
+	  touch-action: none;
     }
 
     .modal-content {
@@ -27,6 +28,9 @@
       max-height: 80vh;
       overflow-y: auto;
       box-shadow: 0 8px 32px rgba(0,0,0,0.3);
+	  -webkit-overflow-scrolling: touch;
+	  /* 允許僅垂直方向滾動，這裡重置 touch-action 使內容可滑動 */
+	  touch-action: pan-y;
     }
 	#upgradeModal .modal-content {
 	  position: absolute;
