--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>末日控制中心 - 關鍵版本擴展調整版</title>
   <style>
     /* 彈窗系統 */
-    .modal-overlay {
+       .modal-overlay {
       position: fixed;
       top: 0;
       left: 0;
@@ -16,7 +16,6 @@
       justify-content: center;
       align-items: center;
       z-index: 1000;
-	  overscroll-behavior: contain;
     }
 
     .modal-content {
@@ -27,9 +26,6 @@
       max-height: 80vh;
       overflow-y: auto;
       box-shadow: 0 8px 32px rgba(0,0,0,0.3);
-	  -webkit-overflow-scrolling: touch;
-	
-	  
     }
 	#upgradeModal .modal-content {
 	  position: absolute;
@@ -44,7 +40,7 @@
 	  transform: translate(-50%, 0);
 	}
 	#buildModal .modal-content {
-	  max-height: 300px; /* 或根據需要調整 */
+	  max-height: 600px; /* 或根據需要調整 */
 	}
 
 
@@ -398,6 +394,18 @@
 	  cursor: pointer;
 	}
 
+	.build-box.empty {
+	  /* 保持與建造卡片相同的高度、邊框邏輯 */
+	  height: 150px;        /* 與其他 build-box 固定高度一致 */
+	  border: 1px solid var(--border-color);
+	  background-color: transparent; /* 也可以設為 #2d2d2d 看看效果 */
+	  border-radius: 8px;
+	  margin-bottom: 10px;
+	  padding: 10px;
+	  cursor: default;      /* 使其沒有點擊效果 */
+	  /* 內容置空，不顯示文字 */
+	}
+	
 	/* 上半部分容器，佔滿剩餘空間並垂直居中 */
 	.build-top-container {
 	  flex: 1;
@@ -742,13 +750,10 @@
   
   <!-- 建造彈窗 -->
   <div id="buildModal" class="modal-overlay">
-   <div class="modal-clickable"></div>
-   <div class="modal-content-wrapper">
     <div class="modal-content">
       <h3>選擇建造項目</h3>
       <div class="build-options" id="buildOptions"></div>
     </div>
-   </div>
   </div>
   
  
@@ -771,9 +776,6 @@
 
   <!-- 收藏彈窗 -->
    <div id="favoritesModal" class="modal-overlay">
-    <div id="buildModal" class="modal-overlay">
-	 <div class="modal-clickable"></div>
-	 <div class="modal-content-wrapper">
 	 <div class="modal-content">
 	 <h3 style="display: flex; justify-content: space-between; align-items: center;">收藏記錄
 	 <!-- 新增收藏完成度 -->
@@ -782,21 +784,14 @@
 	 <div class="collection-content" id="collectionContent">
 		  <!-- 收藏內容將在此填充 -->
 	 </div>
-	 </div>
-    </div>
-   </div>
-   </div>
-   <div id="productionCollectionModal" class="modal-overlay">
-    <div id="buildModal" class="modal-overlay">
-	<div class="modal-clickable"></div>
-	<div class="modal-content-wrapper">
-     <div class="modal-content">
-		 <h3>生產記錄</h3>
-		 <div id="productionCollectionContent"></div>
-	 </div>
 	</div>
    </div>
-   </div>
+   <div id="productionCollectionModal" class="modal-overlay">
+    <div class="modal-content">
+		<h3>生產記錄</h3>
+		<div id="productionCollectionContent"></div>
+	  </div>
+	</div>
 
    
   <!-- 建築互動彈窗（管理建築資訊／拆除） -->
@@ -1970,7 +1965,7 @@
 	  const available = Object.entries(BUILDINGS)
 		.filter(([key, cfg]) => cfg.baseCost && key.toLowerCase() !== "center");
 
-	  const modalContent = available.map(([key, cfg]) => {
+	  let modalContent = available.map(([key, cfg]) => {
 		// 取得 1 級時的加成情報（可選，用於顯示右側描述）
 		let bonusInfo = "";
 		if (typeof cfg.getUpgradeInfo === "function") {
@@ -2014,6 +2009,11 @@
 		  </div>
 		`;
 	  }).join('');
+	  
+	  modalContent += `
+	      <div class="build-box empty"></div>
+		  <div class="build-box empty"></div>
+	  `;
 
 	  // 將組合的彈窗內容更新到 DOM 中
 	  document.getElementById('buildOptions').innerHTML = modalContent;
@@ -2376,74 +2376,15 @@
       updateAllDisplays();
     }
   
-    function stopPropagationHandler(e) {
-	  // 如果僅有1個觸控點，阻止事件冒泡，從而僅操作彈窗內容
-	  if (e.touches && e.touches.length === 1) {
-		e.stopPropagation();
-	  }
-	  // 若有兩根或以上，則不阻止，讓縮放動作可冒泡至全頁（即全頁縮放依然有效）
-	}
-
-	function showModal(modalId) {
-	  const modal = document.getElementById(modalId);
-	  if (modal) {
-		modal.style.display = "flex";
-		// 為空白區添加點擊／觸摸退出事件
-		const clickable = modal.querySelector(".modal-clickable");
-		if (clickable) {
-		  clickable.addEventListener("click", modalCloseHandler);
-		  clickable.addEventListener("touchend", modalCloseHandler);
-		}
-		// 為彈窗內容添加觸摸事件監聽，根據觸控點數決定是否阻止事件冒泡
-		const content = modal.querySelector(".modal-content");
-		if (content) {
-		  content.addEventListener("touchstart", stopPropagationHandler, { passive: true });
-		  content.addEventListener("touchmove", stopPropagationHandler, { passive: true });
-		}
-	  }
-	}
-
-	function closeModal(modalId) {
-	  const modal = document.getElementById(modalId);
-	  if (modal) {
-		modal.style.display = "none";
-		const clickable = modal.querySelector(".modal-clickable");
-		if (clickable) {
-		  clickable.removeEventListener("click", modalCloseHandler);
-		  clickable.removeEventListener("touchend", modalCloseHandler);
-		}
-		const content = modal.querySelector(".modal-content");
-		if (content) {
-		  content.removeEventListener("touchstart", stopPropagationHandler);
-		  content.removeEventListener("touchmove", stopPropagationHandler);
-		}
-	  }
-	}
-
-	function modalCloseHandler(e) {
-	  e.stopPropagation();
-	  const overlay = e.currentTarget.parentElement;
-	  if (overlay && overlay.id) {
-		closeModal(overlay.id);
-	  }
-	}
-
-
-
-	// 修改後的阻止函式：只在觸摸點在 .modal-content 內時阻止滾動
-	function preventBackgroundScroll(e) {
-	  // 若多點觸控（通常為縮放）則允許
-	  if (e.touches && e.touches.length > 1) return;
-	  
-	  // 如果觸摸事件的目標是在彈窗內容內，則阻止滾動
-	  if (e.target.closest(".modal-content")) {
-		e.preventDefault();
-	  }
-	  // 此外，當觸摸事件發生在 modal-overlay 但不在 .modal-content 內時，讓事件正常傳遞，
-	  // 這樣用戶可以滑動背景頁面（如果不被其他代碼禁用背景滾動）。
-	}
-
-
+    function showModal(modalId) {
+      const modal = document.getElementById(modalId);
+      if (modal) modal.style.display = "flex";
+    }
+  
+    function closeModal(modalId) {
+      const modal = document.getElementById(modalId);
+      if (modal) modal.style.display = "none";
+    }
   
 
     /***** 輔助函數 結束 *****/
